@@ -84,19 +84,6 @@ sub helper {
     return $self;
 }
 
-#sub new {
-#    my $self = shift->SUPER::new(@_);
-#    
-#    # Check attribute names
-#    my @attrs = keys %$self;
-#    foreach my $attr (@attrs) {
-#        croak qq{"$attr" is invalid attribute name"}
-#          unless $self->can($attr);
-#    }
-#    
-#    return $self;
-#}
-
 sub connect {
     my $proto = shift;
     
@@ -111,6 +98,9 @@ sub connect {
     
     my $user        = $self->user;
     my $password    = $self->password;
+    my $dbi_options = $self->dbi_options || {};
+    
+    $DB::single = 1;
     
     # Connect
     my $dbh = eval {DBI->connect(
@@ -121,6 +111,7 @@ sub connect {
             RaiseError => 1,
             PrintError => 0,
             AutoCommit => 1,
+            %$dbi_options
         }
     )};
     
@@ -315,6 +306,19 @@ sub insert {
                                           filter => $filter);
     
     return $ret_val;
+}
+
+sub new {
+    my $self = shift->SUPER::new(@_);
+    
+    # Check attribute names
+    my @attrs = keys %$self;
+    foreach my $attr (@attrs) {
+        croak qq{"$attr" is invalid attribute name}
+          unless $self->can($attr);
+    }
+    
+    return $self;
 }
 
 sub register_filter {
@@ -735,6 +739,14 @@ C<connect()> method use this value to connect the database.
 
 L<DBI> object. You can call all methods of L<DBI>.
 
+=head2 C<dbi_options>
+
+    my $dbi_options = $dbi->dbi_options;
+    $dbi            = $dbi->dbi_options($dbi_options);
+
+DBI options.
+C<connect()> method use this value to connect the database.
+
 =head2 C<default_bind_filter>
 
     my $default_bind_filter = $dbi->default_bind_filter
@@ -959,6 +971,13 @@ B<Example:>
                  param  => {title => 'Perl', author => 'Taro'},
                  append => "some statement",
                  filter => {title => 'encode_utf8'})
+
+=head2 C<new>
+
+    my $dbi = DBIx::Custom->connect(data_source => "dbi:mysql:database=dbname",
+                                    user => 'ken', password => '!LFKD%$&');
+
+Create a new L<DBIx::Custom> object.
 
 =head2 C<register_filter>
 
